--- a/style.css
+++ b/style.css
@@ -12,21 +12,24 @@ body {
 }
 header {
     background: #ebebeb;
-    padding: 20px;
-    margin-bottom: 20px;
+    padding: 30px;
+    height: 80px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 nav {
     background: #ebebeb;
-    padding: 20px;
+    height: 80px;
+    padding: 30px;
     margin-bottom: 20px;
 }
 section {
     background: #ebebeb;
-    width: 59%;
+    width: 495px;
     height: 300px;
-    padding: 20px;
-    margin-right: 2%;
-    margin:bottom;
+    padding-top: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
     float: left;
 }
 article {
@@ -34,28 +37,26 @@ article {
     overflow: auto;
     background: #777;
     color: #ebebeb;
-    width: 95%;
+    width: 475px;
     height: 200px;
     padding: 20px;
-    margin-left: 10px;
-    margin-top: 20px;
+    margin: 30px 10px 10px 10px;
+}
+div {
+    background: #ebebeb;
+    color: #777;
+    padding: 10px;
+    margin: 10px;
 }
 h1 {
-    background: #ebebeb;
-    color: #777;
-    padding: 10px;
-    font-weight: bold;
-}
-p {
-    background: #ebebeb;
-    color: #777;
-    padding: 10px;
+    font-size: 18px;
+    margin: 0px auto;
 }
 aside {
     background: #ebebeb;
-    width: 39%;
+    width: 445px;
     height: 300px;
-    padding: 20px;
+    padding-top: 20px;
     margin-bottom: 20px;
     float: left;
 }
